<resources>
    <string name="app_name">Show Jumping Counter</string>
    <string name="rider_a">Rider A</string>
    <string name="rider_b">Rider B</string>
    <string name="knockdown">Knockdown</string>
    <string name="refusal">Refusal</string>
    <string name="retired_fall">Retired/Fall</string>
    <string name="start_time">Start time</string>
    <string name="stop_time">Stop time</string>
    <string name="restart_time">Restart time</string>
    <string name="reset">Reset</string>
</resources>