<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider_a"
                android:textSize="14sp"
                android:textColor="@color/textAppTwo"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"
                android:padding="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rider_a_penalty"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/textAppOne"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knockdown"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="knockdownForA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="refusalForA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retired_fall"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="retiredForA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:id="@+id/start_time_RiderA"
                android:background="@color/newButton"
                android:textColor="@color/white"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_time"
                android:id="@+id/stop_time_RiderA"
                android:background="@color/newButton"
                android:textColor="@color/white"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Chronometer
                android:id="@+id/timeRiderA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider_b"
                android:textSize="14sp"
                android:textColor="@color/textAppTwo"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"
                android:padding="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rider_b_penalty"
                android:text="0"
                android:textSize="56sp"
                android:textColor="@color/textAppOne"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knockdown"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="knockdownForB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refusal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="refusalForB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retired_fall"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:onClick="retiredForB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:id="@+id/start_time_RiderB"
                android:background="@color/newButton"
                android:textColor="@color/white"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_time"
                android:id="@+id/stop_time_RiderB"
                android:background="@color/newButton"
                android:textColor="@color/white"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>

            <Chronometer
                android:id="@+id/timeRiderB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:text="@string/reset"
        android:layout_marginBottom="32dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:onClick="reset"/>

</RelativeLayout>